# adrenochrome_ascent

./: .gitignore  Cargo.toml  README.md  master_todo.md
app/: Cargo.toml
app/src/: main.rs
assets/floors/: ending_road.ron  floor_01.ron  floor_02.ron  floor_03.ron  floor_04.ron  floor_05.ron  floor_06.ron  floor_07.ron  floor_08.ron  floor_09.ron  floor_10.ron
assets/images/style_reference/: README.md
content/: Cargo.toml
content/src/: floor_def.rs  lib.rs
docs/: master_todo.md
docs/content/: balance-tables.md  floor-room-lists.md  sprint-10-playtest-notes.md
docs/sprints/: README.md  sprint-00-cross-cutting.md  sprint-01-project-bootstrap-core-engine-foundation.md  sprint-02-map-floor-loading-system.md  sprint-03-player-systems-inventory.md  sprint-04-enemy-factions-ai-lieutenant-mob-tier.md  sprint-05-mid-game-factions-hazards-warden-tier.md  sprint-06-late-game-factions-minigames-scientist-tier.md  sprint-07-executive-tier-progression-moral-choice.md  sprint-08-audio-ui-polish.md  sprint-09-content-completion-balancing.md  sprint-10-testing-optimization-ship.md
engine/: Cargo.toml
engine/src/: attract.rs  billboard.rs  crt_material.rs  demo.rs  frame_source.rs  lib.rs  map.rs  palette.rs  pixel_hud.rs  ray_camera.rs  raycaster.rs  render_target.rs  textures.rs
engine/src/shaders/: crt_upscale.wgsl
gameplay/: Cargo.toml
gameplay/src/: floor_loader.rs  lib.rs
gameplay/src/audio/: mod.rs
gameplay/src/combat/: mod.rs
gameplay/src/enemy/: ai.rs  alarm.rs  archetype.rs  boss.rs  components.rs  faction.rs  loot.rs  mod.rs  scientist.rs  spawn.rs  turret.rs  warden.rs
gameplay/src/game/: floor.rs  mod.rs  settings.rs  states.rs  transitions.rs
gameplay/src/hazard/: crate_push.rs  mod.rs  timed_valve.rs
gameplay/src/interact/: mod.rs
gameplay/src/player/: constants.rs  controller.rs  hand.rs  mod.rs  perks.rs  serum.rs  vitals.rs  weapons.rs
gameplay/src/puzzle/: dna.rs  effects.rs  mod.rs  registry.rs
gameplay/src/save/: mod.rs
gameplay/src/ui/: hud.rs  level_map.rs  menus.rs  mod.rs  terminal.rs
legacy/src_014/: main.rs
legacy/src_014/audio/: plugin.rs
legacy/src_014/enemy/: components.rs  plugin.rs  systems.rs
legacy/src_014/game/: conditions.rs  constants.rs  mod.rs  plugin.rs  states.rs
legacy/src_014/level/: definitions.rs  loader.rs  mod.rs  plugin.rs
legacy/src_014/player/: controller.rs  plugin.rs
legacy/src_014/puzzle/: components.rs  plugin.rs  systems.rs
legacy/src_014/ui/: hud.rs  menus.rs  mod.rs  plugin.rs
scripts/: gen_audio.py
