[workspace]
members = ["engine", "gameplay", "content", "app"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Adrenochrome Ascent Team"]
description = "A retro first-person horror-action game built in Rust + Bevy"

[workspace.dependencies]
# Bevy's default `audio` feature only enables Vorbis; our banks are PCM WAV.
bevy = { version = "0.19", features = ["wav"] }
bevy_egui = "0.41"
serde = { version = "1", features = ["derive"] }
ron = "0.8"

# Enable dynamic linking for faster dev iteration across all workspace members.
[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
