[package]
name = "adrenochrome_gameplay"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "ECS gameplay systems, player, enemy, puzzle for Adrenochrome Ascent"

[dependencies]
bevy.workspace = true
bevy_egui.workspace = true
adrenochrome_engine = { path = "../engine" }
adrenochrome_content = { path = "../content" }
serde.workspace = true
ron.workspace = true
